app/styles/global.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    font-family: "Segoe UI", sans-serif;
    display: flex;
    flex-direction: column;
    min-height: 100dvh;
}

header.bvs-header {
    background-color: #008;
    color: white;
    border-bottom: 1px solid dimGray;
    padding: 0 var(--edge-padding);
}

header.bvs-header h1 {
    font-size: inherit;
    font-weight: normal;
    display: flex;
    gap: 0.5em;
    align-items: center;
}

header.bvs-header h1 img {
    height: 1.5em;
}

header.bvs-header > nav a {
    color: white;
}

main.bvs-main {
    padding: var(--edge-padding);
    flex-grow: 1;
}

footer.bvs-footer {
    padding: var(--edge-padding);
    text-align: center;
    font-family: Constantia;
}

footer.bvs-footer img.github-logo {
    width: 1em;
    height: 1em;
    margin: 0 .2em 0 .5em;
    vertical-align: text-top;
}

footer.bvs-footer a {
    font-weight: bold;
    text-decoration: unset;
    color: unset;
}

footer.bvs-footer a .underline {
    text-decoration: underline;
}

